# vulkano-template

./: Cargo.toml  README.md  default_test.cap
.obsidian/: workspace.json
src/: app.rs  lib.rs  main.rs  physics.rs  prefabs.rs  profiler.rs  vertex_data.rs
src/game_objects/: camera.rs  component_info.rs  game_world.rs  light.rs  mod.rs  object_loader.rs  scene.rs  square.rs  transform.rs  utility.rs
src/models/: mesh.rs  mod.rs  square.rs  traits.rs
src/physics/: collider.rs  contact.rs  geo_alg.rs  geo_alg_com.rs
src/physics/collider/: bounds_tree.rs  bvh.rs  ray.rs
src/render/: context.rs  draw_system.rs  lighting_system.rs  mod.rs  render_context.rs  render_loop.rs  renderer.rs  resource_manager.rs
src/render/draw_system/: frame_data.rs
src/render/render_data/: frame_data.rs  material.rs  mesh.rs  mod.rs  render_object.rs  texture.rs
src/render/renderer/: deferred_renderer.rs  mod.rs
src/shaders/: mod.rs
src/shaders/alpha/: fragment.frag  mod.rs
src/shaders/basic/: fragment.frag  mod.rs  vertex.vert
src/shaders/bounding_box/: box.frag  box.vert
src/shaders/colored/: billboard.vert  mod.rs  solid.frag  vertex.vert
src/shaders/draw/: billboard.vert  mod.rs
src/shaders/includes/: aabb.glsl  colored_data.glsl  draw_vert_in.glsl  global_data.glsl  light_attachments.glsl  object_data.glsl
src/shaders/lighting/: ambient.frag  mod.rs  (+5 more)
src/ui/: mod.rs
src/utilities/: math.rs  max_heap.rs
src/vulkano_objects/: allocators.rs  buffers.rs  command_buffers.rs  instance.rs  mod.rs  physical_device.rs  pipeline.rs  render_pass.rs  swapchain.rs
(+27 files in other folders)
