[package]
name = "vulkano-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = "0.28"
cgmath = "0.18"
png = "0.17"
tobj = "4.0"
legion = "0.4"
crossterm = "0.27"
egui_winit_vulkano = "0.27"

[profile.dev]
opt-level = 1
